# tasks

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
app/: agent_run_store.py  dispatcher.py  errors.py  main.py  models.py  parser.py  registry.py  trace_store.py
app/tools/: __init__.py  calculator.py  echo.py
docs/superpowers/plans/: 2026-06-09-agent-tool-endpoint.md
docs/superpowers/specs/: 2026-06-09-agent-tool-endpoint-design.md
tests/: conftest.py  test_agent_run_store.py  test_api_replay.py  test_api_run.py  test_api_runs.py  test_api_traces.py  test_calculator.py  test_calculator_parser.py  test_dispatcher.py  test_errors.py  test_models.py  test_registry.py  test_trace_store.py
